# scuttle

./: .gitignore  Makefile  README.md  dev-log.org  dune-project  scuttle.opam
lib/: Makefile  card.ml  card.mli  deck.ml  deck.mli  dune  game.ml  game.mli  game_engine.ml  game_engine.mli  lexer.mll  parser.mly  player.ml  player.mli  playerSet.ml  playerSet.mli
lib/games/: old_maid.ml
patches/: parser.mli.header
test/: Makefile  dune  test.ml  test_card.ml  test_card.mli  test_deck.ml  test_deck.mli  test_game.ml  test_game_engine.ml  test_game_engine.mli  test_parser.ml  test_parser.mli  test_player.ml  test_playerSet.ml  tester.ml  tester.mli
